# clocks

./: CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/: CMakeLists.txt  clock_12.hpp  clock_24.hpp
test/: CMakeLists.txt  test_clock_12.cpp  test_clock_24.cpp
